# meridian

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  TESTING.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml  eval.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 9bff93bd4d29_domain_schema_meetings_chunks_decisions_.py  dd7bdb752c64_add_chunk_full_text_search_vector.py  f7222b85a8b6_add_traces_table.py
apps/api/app/: config.py  db.py  dependencies.py  main.py
apps/api/app/models/: orm.py  schemas.py
apps/api/app/providers/diarization/: base.py  factory.py  pyannote_provider.py
apps/api/app/providers/embedding/: base.py  factory.py  local_bge_provider.py  voyage_provider.py
apps/api/app/providers/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py
apps/api/app/providers/transcription/: base.py  factory.py  faster_whisper_provider.py
apps/api/app/repositories/: action_item_repository.py  chunk_repository.py  meeting_repository.py  trace_repository.py
apps/api/app/routers/: action_items.py  ask.py  meetings.py  search.py  traces.py
apps/api/app/services/: answer_generation.py  audio_alignment.py  audio_ingestion.py  chunking.py  citations.py  extraction.py  ingestion.py  llm_json.py  retrieval.py  tracing.py  transcript_loader.py  transcript_parser.py
apps/api/app/services/guardrails/: __init__.py  input_guardrail.py  output_guardrail.py
apps/api/scripts/: load_transcript.py
apps/api/tests/: conftest.py  fakes.py
apps/api/tests/integration/: test_ask.py  test_decisions_and_action_items.py  test_domain_schema_constraints.py  test_extraction.py  test_ingest_audio.py  test_ingestion.py  test_local_bge_embedding_provider.py  test_meetings_delete.py  test_meetings_list.py  test_search.py  test_traces.py  test_transcript_loader_round_trip.py
apps/api/tests/unit/: test_answer_generation.py  test_anthropic_provider.py  test_audio_alignment.py  test_audio_ingestion.py  test_chunking.py  test_dependencies.py  test_embedding_providers.py  test_extraction.py  test_faster_whisper_provider.py  test_gemini_provider.py  test_health.py  test_input_guardrail.py  test_llm_factory.py  test_output_guardrail.py  test_pyannote_provider.py  test_retrieval.py  test_schemas.py  test_tracing.py  test_transcript_loader.py  test_transcript_parser.py  test_transcription_diarization_factories.py  test_voyage_provider.py
apps/mcp_server/: pyproject.toml
apps/mcp_server/mcp_server/: __main__.py  client.py  config.py  server.py
apps/mcp_server/tests/: conftest.py  test_smoke.py
apps/web/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/app/components/: Nav.test.tsx  Nav.tsx
apps/web/app/components/chat/: ChatView.test.tsx  ChatView.tsx  MeetingScopeSelect.test.tsx  MeetingScopeSelect.tsx
apps/web/app/components/citations/: CitationChip.test.tsx  CitationChip.tsx
apps/web/app/components/meetings/: ActionItemFilters.test.tsx  ActionItemFilters.tsx  MeetingDetailView.test.tsx  MeetingDetailView.tsx  MeetingIngestUpload.test.tsx  MeetingIngestUpload.tsx  MeetingTimeline.test.tsx  MeetingTimeline.tsx  MeetingsListView.test.tsx  MeetingsListView.tsx  TimelineEntryCard.test.tsx  TimelineEntryCard.tsx
apps/web/app/components/traces/: TraceDetailView.test.tsx  TraceDetailView.tsx  TraceFilters.test.tsx  TraceFilters.tsx  TraceListRow.test.tsx  TraceListRow.tsx  TraceOutcomeBadge.test.tsx  TraceOutcomeBadge.tsx  TraceStageTimeline.test.tsx  TraceStageTimeline.tsx  TracesListView.test.tsx  TracesListView.tsx
apps/web/app/components/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Input.test.tsx  Input.tsx  Panel.test.tsx  Panel.tsx
apps/web/app/lib/: cn.ts  format.test.ts  format.ts  motion.ts
apps/web/app/lib/api/: client.test.ts  client.ts  types.ts  (+1 more)
apps/web/app/meetings/: page.tsx
apps/web/app/traces/: page.tsx
apps/web/e2e/: happy-path.spec.ts
data/audio/: generate_test_fixture.py  test_multi_speaker_sample.json
data/transcripts/: 2026-01-14_discovery-call-riverside-health-network.txt  2026-01-22_sprint-review-onboarding-flow.txt  2026-01-29_clinical-advisory-alert-thresholds.txt  2026-02-05_sprint-review-workoutfeedback-schema.txt  2026-02-12_discovery-call-brightpath-corp.txt  2026-02-19_leadership-sync-roadmap-prioritization.txt  2026-02-27_clinical-advisory-notification-copy-review.txt  2026-03-06_sprint-review-pilot-readiness.txt  2026-03-13_discovery-call-alden-mutual-insurance.txt  2026-03-20_clinical-advisory-pilot-safety-go-no-go.txt  2026-03-30_cross-functional-data-retention-policy.txt  2026-04-10_retro-notification-incident-postmortem.txt
docs/adr/: 0000-template.md  0001-assignment-option-and-product-framing.md  0002-core-tech-stack.md  0003-custom-orchestration-vs-framework.md  0004-vector-storage-and-embedding-provider.md  0005-domain-schema.md  0006-chunking-strategy.md  0007-retrieval-and-citation-strategy.md  0008-structured-extraction-and-guardrails.md  0009-evaluation-methodology.md  0010-observability-approach.md  0011-mcp-exposure.md  0012-voice-to-transcript-and-diarization.md  0013-switch-default-llm-to-gemini.md  0014-frontend-architecture.md  0015-ci-coverage-and-pipeline-ordering.md  0016-eval-suite-ci-gating-and-quota-conservation.md  README.md
eval/: caching_llm_provider.py  golden.py  judge.py  metrics.py  run_eval.py
eval/golden_dataset/: golden_questions.json
eval/tests/: test_caching_llm_provider.py  test_golden.py  test_judge.py  test_metrics.py  test_run_eval.py
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
plans/: 001-motion-tokens-foundation.md  002-button-card-press-feedback.md  003-citation-chip-expand-motion.md  004-chat-result-panels-enter-transition.md  005-ingest-upload-status-enter-transition.md  006-list-entrance-stagger.md  007-trace-list-stale-dim-on-refetch.md  README.md
(+2 files in other folders)
