[project]
name = "meridian-api"
version = "0.1.0"
description = "Meridian meeting intelligence API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=2.0",
    "anthropic>=0.110",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # <5.0: 5.x's optional audio/video embedding support imports torchcodec
    # unconditionally at module load time, which hard-crashes in any
    # environment without a working ffmpeg -- see docs/adr/0012's
    # "torchcodec import crash" note. Irrelevant to this project either way
    # (only the local BGE *text* embedding model is used), so there's no
    # real feature loss in staying below it.
    "sentence-transformers>=3.0,<5.0",
    "voyageai>=0.3",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0",
    "pyannote.audio>=4.0",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic autogenerates versions/*.py; hand-editing each one to satisfy
# pyupgrade/style rules on every migration isn't worth it.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection convention is exactly the "function call
# in a default argument" pattern B008 normally flags -- these are the
# framework-standard callables, not a real mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Query", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "app"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# None of these three ship type stubs or a py.typed marker.
module = ["faster_whisper.*", "soundfile.*", "scipy.signal.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# app/db.py's engine (and its connection pool) is created once at module
# import time and shared across the whole test session -- tests must share
# one event loop too, or pooled asyncpg connections get reused across loops
# and raise "attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
branch = true
source = ["app"]
