[project]
name = "meridian-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Meridian meeting-intelligence API as tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28,<2",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "anyio>=4.0",
]

[project.scripts]
meridian-mcp-server = "mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "mcp_server"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
